--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "next": "15.3.3",
     "nodemailer": "^7.0.3",
