converting static data to dynamic in profile page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
